// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShoppingListTable > should render correctly 1`] = `
<div>
  <div>
    <ol>
      <div
        id="0"
        role="listitem"
        style="border-style: solid; border-width: 2px; margin-top: 5pt;"
      >
        <div
          style="display: flex;"
        >
          <p
            style="css-float: left; width: 90%;"
          >
            test 1
          </p>
          <button
            style="css-float: right;"
          >
            Expand
          </button>
        </div>
      </div>
    </ol>
    <p
      style="css-float: left;"
    >
      Total cost: £
      <span>
        0
      </span>
    </p>
  </div>
</div>
`;

exports[`ShoppingListTable > should render multiple correctly 1`] = `
<div>
  <div>
    <ol>
      <div
        id="0"
        role="listitem"
        style="border-style: solid; border-width: 2px; margin-top: 5pt;"
      >
        <div
          style="display: flex;"
        >
          <p
            style="css-float: left; width: 90%;"
          >
            test 1
          </p>
          <button
            style="css-float: right;"
          >
            Expand
          </button>
        </div>
      </div>
      <div
        id="1"
        role="listitem"
        style="border-style: solid; border-width: 2px; margin-top: 5pt;"
      >
        <div
          style="display: flex;"
        >
          <p
            style="css-float: left; width: 90%;"
          >
            test 2
          </p>
          <button
            style="css-float: right;"
          >
            Expand
          </button>
        </div>
      </div>
    </ol>
    <p
      style="css-float: left;"
    >
      Total cost: £
      <span>
        1
      </span>
    </p>
  </div>
</div>
`;
